Some minor changes, very important security fix in the htaccess.

--- a/System/Packages/Dynamic/Package.ini
+++ b/System/Packages/Dynamic/Package.ini
@@ -7,3 +7,6 @@ description = Enables support for dynamic loading of config, ACL and plugins fro
 [Plugin]
 Autoload.name = Autoload
 Autoload.description = Autoloads plugins, config and ACL from the database.
+
+Region.name = Dynamic Region
+Region.description = Adds support for dynamic populated regions.
